--- a/backend/api/review/models/review.settings.json
+++ b/backend/api/review/models/review.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "reviews",
   "info": {
-    "name": "review"
+    "name": "review",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -24,6 +25,11 @@
     "body": {
       "type": "richtext",
       "required": true
+    },
+    "categories": {
+      "collection": "category",
+      "via": "reviews",
+      "dominant": true
     }
   }
 }
